# cpp_opennn

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc
